--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "async-storage": "^0.1.0",
+    "@react-native-async-storage/async-storage": "^1.13.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-redux": "^7.2.2",
