--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.63.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
