--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.3",
+    "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-picker/picker": "^1.9.10",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-redux": "^7.2.2",
@@ -30,5 +32,10 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
