--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "^1.9.10",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
