--- a/[Exercise-3] Fonts-Images/package.json
+++ b/[Exercise-3] Fonts-Images/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "global": "^4.4.0",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-cli": "^2.0.1",
+    "react-native-status-bar-height": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
