--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.3",
+    "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-picker/picker": "^1.9.10",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-status-bar-height": "^2.6.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
@@ -30,5 +33,10 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
