add splash screen + app icon for ios & android

--- a/LibraryApp/ios/Podfile
+++ b/LibraryApp/ios/Podfile
@@ -8,6 +8,8 @@ target 'LibraryApp' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'LibraryAppTests' do
     inherit! :complete
     # Pods for testing
