--- a/LibraryApp/ios/LibraryApp/Info.plist
+++ b/LibraryApp/ios/LibraryApp/Info.plist
@@ -38,13 +38,21 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Comic Sans MS.ttf</string>
+		<string>GochiHand-Regular.ttf</string>
+		<string>icomoon.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDarkContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -53,11 +61,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Comic Sans MS.ttf</string>
-		<string>GochiHand-Regular.ttf</string>
-		<string>icomoon.ttf</string>
-	</array>
 </dict>
 </plist>
