--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -21,6 +21,10 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-image-picker": "^3.3.2",
+    "react-native-permissions": "^3.0.1",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-splash-screen": "^3.2.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
