--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -18,7 +18,11 @@
     "@react-navigation/stack": "^5.14.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^3.3.2",
+    "react-native-permissions": "^3.0.3",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-splash-screen": "^3.2.0",
