--- a/LibraryApp/package.json
+++ b/LibraryApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.3",
     "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.10",
     "@react-navigation/native": "^5.9.3",
