--- a/GuideProject/package.json
+++ b/GuideProject/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.4",
+    "babel-plugin-module-resolver": "^4.1.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-splash-screen": "^3.2.0",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
